# rust-binary-MNIST

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  predict.rs  serialize.rs
